# seg_and_track

./: .gitignore  README.md  chatsky_dialog.py  compose.base.yaml  compose.deploy.yaml  compose.dev.yaml  compose.proxy.yaml  installed_packages.txt  into.sh  pyproject.toml  requirements.txt  unpack_bags.py
common_packages/services_api/services_api/: seg_and_track.py
services/seg_and_track/: Dockerfile  app.py  build.sh  into.sh  pyproject.toml
services/seg_and_track/src/: DoF_pose_estim_aruco.py  conversions.py  depth_map.py  masks.py  seg_and_track.py  seg_test1.py  segmentor.py  visualization.py
services/seg_and_track/tests/: conftest.py  test_*.py
services/seg_and_track/tests/data/: segmentation_result_1.json
services/seg_and_track/tests/data/output/: segmentation_result_1.json
services/seg_and_track/tests/output/out1/: segmentation_result_1.json  segmented_image_1.json
