[tool.poetry]
name = "r-d-ac_robotic_integration"
version = "0.1.0"
description = ""
authors = ["Denis Kuznetsov <kunetsov.den.p@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
services-api = {path = "common_packages/services_api", develop = true}
langserve = "^0.2.2"
sse-starlette = "^2.1.3"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pytest = "^8.3.2"
langchain = "^0.2.13"
huggingface-hub = "^0.24.5"
langchain-openai = "^0.1.22"
pydantic-settings = "^2.4.0"
chatsky = "^0.8.0"
assistant-common = {path = "services/assistant/packages/assistant_common", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]